# NNAF

./: .gitignore  README.md  in100.py  in100.py.lprof  main.py  main.py.lprof  pyproject.toml
src/nnaf/: __init__.py  _types.py  blocks.py  engine.py  layers.py  logger.py  lrscheduler.py  miscs.py  parallel.py  pttype.py
src/nnaf/data/: __init__.py  _lmdb.py  compress.py  database.py  in100.py  time_series_0508.py  voc07.py
src/nnaf/logger/: basic.py
src/nnaf/optim/: grad.py  scheduler.py
src/nnaf/transforms/: onedim.py
wandb/: latest-run
wandb/run-20250524_014025-9x5if1r9/: run-9x5if1r9.wandb
wandb/run-20250524_014025-9x5if1r9/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
